02-04-Добавлено текстовое содержание

--- a/index.html
+++ b/index.html
@@ -4,21 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Продажа билетов в кино в Иннополисе<</title>
 </head>
 <body>
-    <h1>Закажите билет в кино</h1>
-    <h2>Всем покупателям подарок!</h2>
-    <div>Добро пожаловать
+<h1>Закажите билет в кино</h1>
+<h2>Всем покупателям подарок!</h2>
+<div>Добро пожаловать
+</div>
+       <div>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis distinctio commodi excepturi, soluta laborum exercitationem odit, expedita aliquid voluptatum minima fugiat quia ducimus! Aut id voluptas blanditiis enim voluptatem!
+           Quidem delectus tenetur quaerat, eos perferendis, natus minima illo amet quod nobis, quis nesciunt error? Alias corporis, non tempore ea quia aspernatur perspiciatis, culpa consequuntur sapiente vel necessitatibus ullam hic.
+           Quas perspiciatis, adipisci enim nisi praesentium cumque ea. Facilis soluta a consectetur unde quibusdam vitae cumque incidunt, odit nihil labore autem totam, ut, minus rem facere repellendus necessitatibus perspiciatis! Deserunt!
+           Maiores cumque labore aliquam quos natus, porro, assumenda obcaecati a ratione illum reprehenderit totam, fuga reiciendis cum temporibus! Molestias recusandae obcaecati sapiente eveniet tempora illum nam odio. Perspiciatis, quos vero.
+           Iusto inventore provident deserunt ut quod omnis vitae ratione cum ipsum architecto soluta impedit libero laudantium, atque ex possimus dolor deleniti! Placeat odio officiis quidem iusto voluptas, quae exercitationem id.
+           Aliquid, maiores possimus ad reprehenderit ipsam accusamus illum sapiente exercitationem odio deleniti suscipit numquam qui consequuntur, provident dicta? Aliquid ab quis ipsam. Sequi perferendis soluta culpa magnam quas ipsam facere.
+       </div>
+       <div>Почему мы?
+       <div>Большие экраны
+         <div>
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe vero repellendus, minus assumenda voluptatum distinctio dolorum, deleniti quidem nam possimus fuga eos excepturi laudantium, enim tenetur commodi minima architecto dignissimos.
+         Sequi deleniti explicabo ipsum, saepe odio facilis commodi eaque officia expedita fugit, libero modi asperiores veniam eum quis vitae obcaecati atque dolores autem nemo sunt molestias excepturi nisi ipsa. Animi!
+         Assumenda repudiandae minima commodi beatae aliquam incidunt alias placeat corrupti nulla labore libero, consectetur in excepturi vero quasi sunt voluptatem quaerat. Voluptas nobis ea maxime esse unde voluptatum, atque delectus.
+         Maiores harum illum quam aspernatur cumque fuga saepe voluptates. Nesciunt reprehenderit explicabo repellat mollitia consequatur quisquam iusto est earum. Accusantium beatae incidunt nulla, doloribus facilis sapiente adipisci unde alias fugiat?
+        </div>
+        <div>Объёмный звук
+         <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt porro corporis necessitatibus animi similique reprehenderit modi quae adipisci eius nesciunt, assumenda illum laudantium deleniti qui illo culpa quasi perferendis dolor!
+        Quasi ab sequi earum perferendis dolore aliquam. Alias, blanditiis. In magnam hic nihil excepturi quam, officia corporis commodi. Dignissimos quasi ex officia excepturi ullam autem numquam ut omnis illo porro?
+        Minus, beatae qui? Aperiam, ipsa modi perspiciatis quaerat ducimus eius ullam facere ab accusamus. Quod, nihil illo! Recusandae consequatur quas obcaecati illo! Harum nam deleniti quas facere, nostrum incidunt consequatur?
+        Doloribus beatae laborum magnam sequi quas perspiciatis, veritatis accusamus cupiditate dolorem architecto! Assumenda deserunt, reiciendis debitis dignissimos commodi ullam eaque quae repellendus nostrum modi totam, quaerat harum! Assumenda, officia ut?
+        </div>
+         <div>Удобные кресла
         <div>
-         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint molestiae eos ipsa, perspiciatis iusto corrupti odio accusamus beatae. Provident possimus, sed facere excepturi fuga eos reiciendis soluta vitae exercitationem voluptates.
-         Dolores blanditiis sit labore. Eius autem reiciendis excepturi, vero assumenda, inventore at tenetur natus numquam architecto aut eos temporibus fugiat delectus ducimus quam incidunt consequuntur, dolorem repellat corrupti in laudantium.
-         Cumque suscipit quam explicabo nisi commodi sed officiis nam facere, reiciendis perspiciatis impedit, deleniti, voluptatibus corporis omnis. Eveniet, nam! Voluptatum odit voluptate voluptas vel pariatur at exercitationem, qui iure laudantium!
-         Ea nostrum debitis, laboriosam neque nesciunt dicta. Ab mollitia quae illum ut reprehenderit excepturi. Dolor, repellat amet? Eveniet, facilis. Quibusdam aut, eveniet at ipsam totam quos excepturi voluptas voluptatem rerum.
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est alias, quam animi ipsam pariatur tenetur explicabo quia optio quasi incidunt possimus culpa eos maiores eaque doloremque accusantium, porro aliquid ea.
+         Porro labore, alias nulla minima sapiente incidunt aut, ratione explicabo debitis molestias optio, doloribus aliquid eius? Quae beatae reiciendis perspiciatis, rem dicta, deleniti atque, in saepe impedit voluptatibus ullam animi?
+         Velit earum aut dolor, consectetur possimus voluptas expedita explicabo sed ad amet doloremque vitae optio, delectus necessitatibus, praesentium soluta quia voluptatum eum fugiat dicta repellendus ea mollitia beatae. Deleniti, numquam.
+        Perspiciatis, eaque illum blanditiis tempore, alias nemo quidem iusto, vero sint id quaerat illo dolores esse dolore. Unde at vitae nam corrupti deserunt molestiae tenetur beatae commodi. Reiciendis, placeat iste.
+        </div>
+         <div>Уютная атмосфера
+         <div>
+         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, laborum doloribus natus magni sequi id, minus sapiente commodi illo corrupti quod nesciunt temporibus, labore nisi suscipit? Atque aut quidem reprehenderit?
+         Molestiae, voluptates sint? Vel, itaque. Eius laudantium ut minima amet eos assumenda eligendi ipsa repellendus temporibus cupiditate magnam minus quia ratione consectetur unde expedita corrupti, voluptatibus excepturi veniam rerum autem?
+         Placeat architecto, dolor rem voluptate atque laboriosam alias excepturi vero expedita libero maxime earum, dolorem quidem, assumenda minus. Nesciunt unde vitae amet quae autem suscipit magni soluta voluptatem corrupti inventore.
+         A sint, nemo obcaecati voluptatum velit accusamus enim vel odio culpa cum esse quibusdam, corporis fugiat. Recusandae, dicta, ea nihil velit deleniti ad quas, illum nobis quae hic totam ullam.
+        </div>
+         <div>Полное погружение
+         <div>
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae distinctio ducimus vel blanditiis pariatur quam quas libero fugiat dolorem recusandae, consequatur provident qui aspernatur nobis, veniam deserunt delectus nostrum doloribus.
+         Reprehenderit error magni dolore assumenda perferendis maxime molestiae eaque a corrupti, omnis voluptates nulla hic repellendus facilis harum. Hic, praesentium in enim omnis quisquam adipisci quod! Cupiditate magnam maiores accusamus.
+         Eum beatae iste nobis tenetur nesciunt placeat impedit aperiam totam animi soluta! Repudiandae culpa harum numquam eligendi inventore consequuntur odit maiores sit sapiente esse non quia, deserunt ipsum rerum cumque!
+         Suscipit rem eveniet magni fuga? Minima inventore odit aliquam repudiandae ipsum expedita itaque quis voluptate unde. Earum perferendis explicabo ratione, quasi suscipit enim, et, fugiat cum vero facere animi dolorem.
+         </div>
+        <div>Поцелуи на заднем ряду
+        <div>
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, eligendi quae voluptates expedita voluptatibus ut exercitationem repudiandae veritatis suscipit error. Expedita maiores impedit excepturi error atque repellendus voluptates aliquid culpa.
+         Explicabo facere a maxime tenetur, eveniet praesentium esse exercitationem, aperiam impedit molestiae, eos sapiente laboriosam alias mollitia saepe ipsum in quae quia id consequatur eaque maiores ipsam. Quasi, pariatur nemo.
+         Aperiam totam iure, culpa sunt vero eaque aut voluptate rerum qui modi exercitationem officia ducimus quas dicta aspernatur impedit, numquam eveniet reiciendis praesentium? Quis repudiandae enim esse obcaecati earum quidem.
+         Eos nemo beatae aspernatur temporibus fugit error dicta dignissimos molestias inventore tenetur, dolore dolores illum odio rerum maiores sint molestiae quisquam maxime repellendus id doloribus. Sapiente maxime similique ea! Magnam.
+         </div>
+        <div>Выберите фильм
+<h3>Подарок каждому!</h3>
+<div>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur soluta aliquam nesciunt. Nostrum nam, fugit ex minus cum est, magni voluptatem facere expedita maxime cupiditate amet iure veniam vel tenetur!
+    Quos nihil accusamus autem! Suscipit quaerat dolorum pariatur odio et reiciendis laudantium distinctio vitae eius voluptates, alias exercitationem iusto sit aliquid minima dolores. Facilis quasi, sapiente necessitatibus perspiciatis nemo autem.
+    Nobis labore aspernatur fuga delectus, iste, minus recusandae accusamus explicabo molestias repellendus voluptatem consequuntur nemo excepturi blanditiis quos aliquam nihil, quae ullam dolorum a neque. Blanditiis libero dolorem pariatur reiciendis?
+    Consequatur error magni sed neque accusamus rem facilis eum et, porro, nisi minus ipsa repellat, minima placeat eaque dicta velit necessitatibus mollitia. Officia pariatur fugit voluptates iste! Qui, id est?
+</div>
+<div>Получить подарок
+ <div>Фильмы
+<div>Товары
+    <div>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos dignissimos voluptates facere quam iste sint eum ad reiciendis blanditiis illo quas quo, in dolore? Exercitationem illo nam officiis architecto odio!
+     Iusto, animi magni facilis quod minus accusantium, incidunt in ex, mollitia consequuntur dolores dignissimos officiis. Doloremque sed ratione deserunt tempore. Cumque quaerat similique autem voluptate itaque, earum saepe illo pariatur.
+    </div>
+    <div>Отзывы
+     <div>
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eum repudiandae, modi a similique nihil! Repellendus, accusantium iure. Odio deleniti aut vitae magnam temporibus est tenetur, eveniet quas consequuntur dolorem.
+     Mollitia, id sapiente! Quia cum dolorum adipisci ad totam ab dolore quis, molestiae fugiat quas repudiandae odio accusantium explicabo officia necessitatibus iste, temporibus sit, magnam accusamus recusandae? Similique, quam nobis.
+     </div>
+     <div>Обратная связь
+     <div>послать
 
         </div>
-    </div>
-
-    
 </body>
 </html>
